--- a/index.html
+++ b/index.html
@@ -21,8 +21,8 @@
 </head>
 <body>
   <div class=header>
-    <h1>私のホームページ</h1>
-    <div>〇〇〇〇のページです。</div>
+    <h1>sii407</h1>
+    <div>sii407のページです。</div>
   </div>
   <div class=main>
     <div>
