--- a/index.html
+++ b/index.html
@@ -35,12 +35,12 @@
     <div>
       <h2>趣味</h2>
       <div>
-        毎朝の〇〇をすること
+        早押しクイズ
       </div>
     </div>
   </div>
   <div class=footer>
-    20YY年MM月DD日
+    2024年12月11日
   </div>
 </body>
 </html>
