--- a/rep01.html
+++ b/rep01.html
@@ -31,7 +31,8 @@
       <img src="art.png" alt="アート" width="50%" height="50%">
       <div>
         1.内容<br>
-        スクラッチを使って線を書くプログラムを～～～自分の文章で続きを書く。<br>
+        スクラッチを使って線を書くプログラムを作成した。
+        内側と外側でペンの太さを変え、線どうしの間隔を狭くし、繰り返し回数を増やした。また、ペンの色を始めに指定することで、毎回同じ色で動作するようにした。<br>
         2.感想<br>
         感想を自分で書く。<br>
       </div>
@@ -42,7 +43,9 @@
       <img src="game.png" alt="ゲーム" width="50%" height="50%">
       <div>
         1.内容<br>
-        ないようないよう<br>
+        スクラッチを使ってりんごとバナナをキャッチするプログラムを作成した。
+        バナナは落ちてくるスピードが速く小さいため、キャッチできた際の点数をりんごに比べて5点高く設定した。
+        また、ねことかごを同時に動かすようなプログラムを組み、かごでキャッチしているように見せた。<br>
         2.感想<br>
         かんそうかんそう<br>        
       </div>
@@ -54,7 +57,7 @@
         <!-- 下のyourIDを 自分のIDに書き替える↓ -->
         <a href="https://sii407.github.io/web/">私のホームページ</a><br>
         1.内容<br>
-        ないようないよう<br>
+        Githubを用いてホームページを作成した。<br>
         2.感想<br>
         かんそうかんそう<br>        
       </div>      
