--- a/rep01.html
+++ b/rep01.html
@@ -34,7 +34,9 @@
         スクラッチを使って線を書くプログラムを作成した。
         内側と外側でペンの太さを変え、線どうしの間隔を狭くし、繰り返し回数を増やした。また、ペンの色を始めに指定することで、毎回同じ色で動作するようにした。<br>
         2.感想<br>
-        感想を自分で書く。<br>
+        色どうしの重なりを表現するために太さ、間隔、繰り返し回数を変化させることで思うように動かすことができた。
+        中心が(0,0)になっていないので、次はそこを修正したい。
+        また、内側の円と外側の縁でそれぞれユーザーが設定した色で始められるようなプログラムを組みたい。<br>
       </div>
     </div>
 
@@ -47,7 +49,9 @@
         バナナは落ちてくるスピードが速く小さいため、キャッチできた際の点数をりんごに比べて5点高く設定した。
         また、ねことかごを同時に動かすようなプログラムを組み、かごでキャッチしているように見せた。<br>
         2.感想<br>
-        かんそうかんそう<br>        
+        キーが押されたときや、似た動きをするスプライトのプログラムを組む際に複製を利用したため、少しの修正のみで済み、手早く作成することができた。
+        もう少しねこの動きがスムーズになるように改善したい。
+        また、ゲームの要素としてキャッチしてはいけないものを落とし、キャッチしてしまったら点数を引く、や、制限時間をつけてプレイヤー同士でランキングを表示するといったことを追加したい。<br>        
       </div>
     </div>
 
