--- a/rep01.html
+++ b/rep01.html
@@ -64,7 +64,8 @@
         <!-- 下のyourIDを 自分のIDに書き替える↓ -->
         <a href="https://sii407.github.io/web/">私のホームページ</a><br>
         1.内容<br>
-        Githubを用いてホームページを作成した。<br>
+        Githubを用いてホームページを作成した。
+        Forkを利用したため、表示する文字列を変えるだけだったので簡単に作成することができた。<br>
         2.感想<br>
         かんそうかんそう<br>        
       </div>      
