--- a/rep01.html
+++ b/rep01.html
@@ -65,9 +65,11 @@
         <a href="https://sii407.github.io/web/">私のホームページ</a><br>
         1.内容<br>
         Githubを用いてホームページを作成した。
-        Forkを利用したため、表示する文字列を変えるだけだったので簡単に作成することができた。<br>
+        
+        。<br>
         2.感想<br>
-        かんそうかんそう<br>        
+        Forkを利用し、表示する文字列を変更するだけだったので簡単に作成することができた。
+        Chromeの検証で何度かwebページがどのようになっているのか見たことはあったが、実際に作成したことはなく、興味があったため面白かった。<br>        
       </div>      
     </div>
 
