--- a/rep02.html
+++ b/rep02.html
@@ -42,7 +42,8 @@
       <img src="ml.png" alt="ML" width="50%" height="50%">
       <div>
         1.内容<br>
-        ないようないよう<br>
+        teachablemachineを利用して機械学習体験を行った。
+        グー、チョキ、パーを<br>
         2.感想<br>
         かんそうかんそう<br>        
       </div>
