--- a/rep02.html
+++ b/rep02.html
@@ -43,7 +43,8 @@
       <div>
         1.内容<br>
         teachablemachineを利用して機械学習体験を行った。
-        グー、チョキ、パーを<br>
+        グー、チョキ、パーを判定できるようにwebカメラからの画像で学習させた。
+        学習させたものをstretch3の拡張機能を用いてプログラムを組んだ。<br>
         2.感想<br>
         かんそうかんそう<br>        
       </div>
