--- a/rep02.html
+++ b/rep02.html
@@ -44,9 +44,11 @@
         1.内容<br>
         teachablemachineを利用して機械学習体験を行った。
         グー、チョキ、パーを判定できるようにwebカメラからの画像で学習させた。
-        学習させたものをstretch3の拡張機能を用いてプログラムを組んだ。<br>
+        また、学習させたものとstretch3の拡張機能を用いてプログラムを組んだ。<br>
         2.感想<br>
-        かんそうかんそう<br>        
+        パーがチョキとして認識されてしまうことが多く、特に左下でパーを出したときにチョキと判定されやすかった。
+        そのため、パーが左下にある画像の学習が足りていなかったと考えた。
+        顔との位置関係も関係してしまっているように思えたので、次は背景をすべて同じにし、手だけが移るような環境で学習させたいと思った。<br>        
       </div>
     </div>
     
