--- a/rep01.html
+++ b/rep01.html
@@ -65,7 +65,7 @@
         <a href="https://sii407.github.io/web/">私のホームページ</a><br>
         1.内容<br>
         Githubを用いてホームページを作成した。
-        Forkを利用し、表示する文字列を変更した。
+        Forkを利用した後、Codeで表示する文字列を変更した。
         
         
         <br>
