--- a/rep02.html
+++ b/rep02.html
@@ -58,9 +58,15 @@
       <img src="roblox.png" alt="RBLX" width="50%" height="50%">
       <div>
         1.内容<br>
-        ないようないよう<br>
+        VRゴーグルを用いてVR空間を体験した。
+        コントローラーでヘッドマウントをたたくことで、現実世界が白黒で表示された。<br>
         2.感想<br>
-        かんそうかんそう<br>
+        座ったときと立った時でアバターも変化していて、コントローラーを置いて手を振ると、コントローラーが消え、自分が動かしたままアバターの手が動いた。
+        このように、現実世界とリンクしており、現実感が強かった。
+        パソコンを使って参加する人の映像は前にあるPCに表示されていた。
+        思ったよりもヘッドマウントは重く、長時間の会議はしんどいだろうなと感じた。
+        
+        <br>
       </div>
     </div>
     
@@ -77,7 +83,7 @@
 
   </div>
   <div class=footer>
-    作成日：20YY年MM月DD日
+    作成日：2025年01月08日
   </div>
 </body>
 </html>
