--- a/rep02.html
+++ b/rep02.html
@@ -30,9 +30,11 @@
       <h3>2-1 2週目のレポートをHTMLで作る</h3>
       <div>
         1.内容<br>
-        ないようないよう<br>
+        基本形が作ってあるhtmlに文字を入力する形で作成した。<br>
         2.感想<br>
-        かんそうかんそう<br>
+        画像が表示されるコードを追加するときは、文字を書いてしまっていたため行数がずれていたが、プログラムの構成を考えて追加することができた。
+        1週目のレポートをすでに作成していたので、特に詰まる点もなく完成させることができた。
+        <br>
         3. 2週目が完成した人は1週目のレポートも完成させる<br>
       </div>
     </div>
@@ -65,6 +67,8 @@
         このように、現実世界とリンクしており、現実感が強かった。
         パソコンを使って参加する人の映像は前にあるPCに表示されていた。
         思ったよりもヘッドマウントは重く、長時間の会議はしんどいだろうなと感じた。
+        robloxでも、人や物とぶつかり、はしごを登るときなど、リアルな動きが多かった。
+        また、コントローラーが薄く表示されているため、操作がしやすかった。
         
         <br>
       </div>
@@ -74,10 +78,10 @@
       <h3>各ページへのリンク</h3>
       <div>
         <!-- 下のyourIDを 自分のIDに書き替える↓ -->
-        <a href="https://yourID.github.io/web/rep01.html">1週目のレポート</a><br>
-        <a href="https://yourID.github.io/web/rep02.html">2週目のレポート</a><br>
-        <a href="https://yourID.github.io/web/rep03.html">3週目のレポート</a><br>
-        <a href="https://yourID.github.io/web/">私のホームページ</a><br>
+        <a href="https://sii407.github.io/web/rep01.html">1週目のレポート</a><br>
+        <a href="https://sii407.github.io/web/rep02.html">2週目のレポート</a><br>
+        <a href="https://sii407.github.io/web/rep03.html">3週目のレポート</a><br>
+        <a href="https://sii407.github.io/web/">私のホームページ</a><br>
       </div>      
     </div>
 
