--- a/rep02.html
+++ b/rep02.html
@@ -61,7 +61,7 @@
       <div>
         1.内容<br>
         VRゴーグルを用いてVR空間を体験した。
-        コントローラーでヘッドマウントをたたくことで、現実世界が白黒で表示された。<br>
+        コントローラーでヘッドマウントを2回たたくことで、現実世界が白黒で表示された。<br>
         2.感想<br>
         座ったときと立った時でアバターも変化していて、コントローラーを置いて手を振ると、コントローラーが消え、自分が動かしたままアバターの手が動いた。
         このように、現実世界とリンクしており、現実感が強かった。
