--- a/rep03.html
+++ b/rep03.html
@@ -31,9 +31,13 @@
       <a href="https://yourId.github.io/web/vr.html">自作した３次元空間</a><br>                                   
       <div>
         1.内容<br>
-        ないようないよう<br>
+        A-Frameのサイトでテンプレートをコピーし、ES-Jam~webプログラミング道場~に貼り付けた後、コーディングを行った。
+        大きさや場所、色を変更した。
+        <br>
         2.感想<br>
-        かんそうかんそう<br>
+        変更するときの色は基本的にRGBを利用するが、redやblueなどはそのまま入力することができた。
+        Z軸の扱いが難しかったが、箱の上に円筒を乗せることができた。
+        コーディング自体は少し経験があったので難しく感じることなく進めることができた。<br>
       </div>
     </div>
     <div>
