--- a/rep03.html
+++ b/rep03.html
@@ -28,7 +28,7 @@
     <div>
       <h3>3-1 JavaScript体験：VR空間を作る</h3>
       <img src="vr.png" alt="JavaScript" width="50%" height="50%"><br>
-      <a href="https://yourId.github.io/web/vr.html">自作した３次元空間</a><br>                                   
+      <a href="https://sii407.github.io/web/vr.html">自作した３次元空間</a><br>                                   
       <div>
         1.内容<br>
         A-Frameのサイトでテンプレートをコピーし、ES-Jam~webプログラミング道場~に貼り付けた後、コーディングを行った。
