--- a/rep03.html
+++ b/rep03.html
@@ -46,9 +46,10 @@
       <a href="https://yourId.github.io/web/dengon.html">伝言板</a><br>                                   
       <div>
         1.内容<br>
-        ないようないよう<br>
+        webプログラミング道場で伝言板を作成した。伝言をセットし、また、削除できるようにした。<br>
         2.感想<br>
-        かんそうかんそう<br>
+        コーディング自体は難しくなかったが、HTMLを世界標準の構造にするための作業が少し大変だった。
+        HTMLを利用すると、ボタンなどを簡単に作成できることが分かった。<br>
       </div>
     </div>
 
