--- a/rep03.html
+++ b/rep03.html
@@ -58,9 +58,12 @@
       <img src="interactive.png" alt="JavaScript" width="20%" height="20%"><br>      
       <div>
         1.内容<br>
-        ないようないよう<br>
+        VRゴーグルを用いて3次元空間を体験した。
+        物を移動させる、視点を変える、球を発射させるなどの動作を行った。<br>
         2.感想<br>
-        かんそうかんそう<br>
+        物体との距離によって、物体との大きさが変わっていた。
+        球を発射し続けると、球が壁の奥にすり抜けていくように見えてこれ以上は出せないのかなと感じた。
+        今回は移動が少なかったため、あまり酔うことなく実践することができた。<br>
       </div>
     </div>
   
