--- a/app.anime-seiyu.html
+++ b/app.anime-seiyu.html
@@ -7,10 +7,10 @@
 <form action="#" method="post">
 	<p>アニメ名1：<br>
 	<input type="text" name="animemei1" size="15"></p>
-    	<p><input type="button" value="" id="button1"></p>
-    	<p>アニメ名2：<br>
+    <p><input type="button" value="検索" id="button1"></p>
+    <p>アニメ名2：<br>
 	<input type="text" name="animemei2" size="15"></p>
-	<p><input type="button" value="" id="button2"></p>
+	<p><input type="button" value="検索" id="button2"></p>
 </form>
 </body>
 </html>
